# libapplefw

./: .gitattributes  .gitignore  Makefile  Makefile.am  autogen.sh  config.h  config.h.in  configure.ac  configure~  libtool
.github/workflows/: codeql.yml
include/: Makefile.am
src/: Makefile.am
tools/: .gitignore  Makefile.am
